Fixed spacing issue

--- a/AAI_App/static/AAI_App/css/mystyle.css
+++ b/AAI_App/static/AAI_App/css/mystyle.css
@@ -3,5 +3,5 @@
  ========================================================================== */
 
  .extra {
-    margin-top: 30px;
+    padding-top: 30px;
 }
